hphp/hack/test/typecheck/new_inference/prop_access_lambda2.php.like_types.exp
File "prop_access_lambda2.php", line 13, characters 35-39:
Invalid argument (Typing[4110])
File "prop_access_lambda2.php", line 13, characters 27-32:
Expected string
File "prop_access_lambda2.php", line 16, characters 20-20:
  via this generic T
File "prop_access_lambda2.php", line 5, characters 38-40:
But got int
